# purple-youtube

./: .gitignore  README.md  im.pidgin.Pidgin3.Plugin.BirdTube.yml  im.pidgin.Pidgin3.Plugin.PurpleYoutube.yml  main.c  meson.build  meson.options  youtube_chat_client.c  youtube_chat_client.h  youtube_chat_parser.c  youtube_chat_parser.h  youtube_types.h
demo/: demo.cpp
src/: api-tweaks.txt  error_wrapper.hpp  event_source_token.hpp  main.c  main.cpp  one_shot_server.cpp  one_shot_server.hpp  refresh_test.c  task.hpp  youtube_chat_client.c  youtube_chat_client.cpp  youtube_chat_client.h  youtube_chat_client.hpp  youtube_chat_connection.cpp  youtube_chat_connection.hpp  youtube_chat_parser.c  youtube_chat_parser.cpp  youtube_chat_parser.h  youtube_chat_parser.hpp  youtube_chat_plugin.cpp  youtube_chat_protocol.cpp  youtube_chat_protocol.hpp  youtube_error.h  youtube_types.hpp
src/pch/: pch.hpp
subprojects/: peel.wrap  rest-1.0.wrap
subprojects/packagefiles/peel/: 0001-dynamic-classes.patch
